# awair-exporter

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.sh
docs/: Awair Home & OAuth Developer APIs.html  api-examples.md  oauth2-doc.html
scripts/: awair-export.py
src/awair_exporter/: __init__.py  client.py  config.py  exporter.py  models.py
tests/: test_models.py
